--- a/TFC/imports/UI/about.html
+++ b/TFC/imports/UI/about.html
@@ -13,6 +13,8 @@
                 <img class="is-rounded" src="Evan.jpg">
             </figure>
             <p>Evan</p>
+            <hr>
+            <p>Acteur de l'environnement et des réseaux</p>
         </div>
 
         <div class="column has-text-centered">
@@ -20,6 +22,8 @@
                 <img class="is-rounded" src="Reza.png">
             </figure>
             <p>Reza</p>
+            <hr>
+            <p>Professionnel du code et de la créatiion</p>
         </div>
 
         <div class="column has-text-centered">
@@ -27,6 +31,8 @@
                 <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
             </figure>
             <p>Henri</p>
+            <hr>
+              <p>Responsable design et conception</p>
         </div>
     </div>
 </template>
