points rules, report moderation & bug fixes

--- a/TFC/imports/UI/about.html
+++ b/TFC/imports/UI/about.html
@@ -23,7 +23,7 @@
             </figure>
             <p>Reza</p>
             <hr>
-            <p>Professionnel du code et de la créatiion</p>
+            <p>Professionnel du code et de la création</p>
         </div>
 
         <div class="column has-text-centered">
@@ -32,7 +32,7 @@
             </figure>
             <p>Henri</p>
             <hr>
-              <p>Responsable design et conception</p>
+            <p>Responsable design et conception</p>
         </div>
     </div>
 </template>
