--- a/TFC/imports/UI/modals/report.html
+++ b/TFC/imports/UI/modals/report.html
@@ -23,19 +23,21 @@
                         <label for="offTopic">Ce produit n'a rien à faire ici</label>
                     </div>
 
-                    <div class="field">
-                        <input class="is-checkradio" type="radio" name="reportReason" id="incorrectInformations">
-                        <label for="incorrectInformations">Les informations sont incorrectes (si vous êtes en mesure de les corriger, merci de le faire via le bouton 'Proposer des modifications')</label>
-                    </div>
-
                 </form>
 
             </section>
 
             <footer class="modal-card-foot">
                 <div class="card-footer-item">
-                    <button class="button is-medium is-outlined">Annuler</button>
-                    <button class="button is-medium has-background-primary" id="reportSubmit">Signaler</button>
+                    <div class="columns" style="width: 100%">
+                        <div class="column">
+                            <button class="button is-medium is-fullwidth is-outlined">Annuler</button>
+                        </div>
+
+                        <div class="column">
+                            <button class="button is-medium is-fullwidth has-background-primary" id="reportSubmit">Signaler</button>
+                        </div>
+                    </div>
                 </div>
             </footer>
         </div>
