navigation with return buttons updated

--- a/TFC/imports/UI/editProduct.html
+++ b/TFC/imports/UI/editProduct.html
@@ -1,5 +1,10 @@
 <template name="editProduct">
     <header class="card-header container" style="border: ridge grey 0.1rem; border-bottom: none;">
+        <div class="card-header-icon" id="return">
+            <span class="icon"><i class="fas fa-reply"></i></span>
+            <p>Retour</p>
+        </div>
+
         <h3 class="card-header-title title is-3 is-centered" style="margin-bottom: 0;">Modifier le produit</h3>
     </header>
     {{#if currentUser}}
