--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -40,7 +40,7 @@
                             <div class="step-details is-primary is-completed">
                                 <p class="step-title">Ajouter</p>
                                 <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
-                                <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager leurs bons plans avec la communauté</p>
+                                <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager ses bons plans avec la communauté</p>
                             </div>
                         </li>
 
@@ -77,19 +77,21 @@
                 <div class="column has-text-centered">
                     <h4 class="title is-4">Ajouter</h4>
                     <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
-                    <p>Chacun est libre de contribuer en ajoutant des produits et ainsi faire grandir avec la communauté</p>
+                    <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager ses bons plans avec la communauté</p>
                 </div>
 
                 <hr style="margin: 0;">
 
                 <div class="column has-text-centered">
+                    <h4 class="title is-4">Voter</h4>
                     <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
                     <p>Votez pour vos produits favoris pour leur donner de la visibilité</p>
                 </div>
 
                 <hr style="margin: 0;">
 
-                <div class="column has-text-centered">
+                <div class="column has-text-centered" style="margin-bottom: 3rem;">
+                    <h4 class="title is-4">Rechercher</h4>
                     <span><i class="fas fa-search image is-64x64" style="display: inline;"></i></span>
                     <p>Trouvez des alternatives pour consommer en ayant un impact positif sur la société</p>
                 </div>
@@ -108,9 +110,9 @@
                     <p>
                         Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des produits mais également d’en proposer.
                         Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits disponibles sur le site.
-                        <br>
-                        Découvrez nos <span class="has-text-primary" style="font: 2.5rem 'Changa One';">{{productsCounter}}</span> produits à impact social !
                     </p>
+                    <br>
+                    <p>Découvrez nos <span class="has-text-primary" style="font: 2.5rem 'Changa One';">{{productsCounter}}</span> produits à impact social !</p>
                 </div>
             </div>
 
