--- a/TFC/imports/UI/searchResults.html
+++ b/TFC/imports/UI/searchResults.html
@@ -58,7 +58,16 @@
                         <br>
                     </div>
                     <br>
-                    <div class="field is-grouped is-grouped-multiline width-fit-content" id="categoryTags" style="margin: 0 auto;"></div>
+                    <div class="field is-grouped is-grouped-multiline width-fit-content" id="categoryTags" style="margin: 0 auto;">
+                        {{#each displaySelectedCategories}}
+                            <div class="control">
+                                <div class="tags has-addons">
+                                    <a class="tag is-link">{{this}}</a>
+                                    <a class="tag is-delete"></a>
+                                </div>
+                            </div>
+                        {{/each}}
+                    </div>
                 </div>
             </div>
         </div>
