--- a/TFC/imports/UI/editProduct.html
+++ b/TFC/imports/UI/editProduct.html
@@ -118,6 +118,11 @@
             <button class="button is-success is-medium is-fullwidth" id="submitModifications" type="submit">Valider les modifications</button>
         </form>
     {{else}}
-        <p class="subtitle"><span class="register link has-text-weight-semibold">Inscrivez-vous</span> ou <span class="login link has-text-weight-semibold">connectez-vous</span> pour continuer.</p>
+        <p class="subtitle">
+            <span class="register link has-text-weight-semibold">Inscrivez-vous</span>
+            <span>ou</span>
+            <span class="login link has-text-weight-semibold">connectez-vous</span>
+            <span>pour continuer.</span>
+        </p>
     {{/if}}
 </template>
