--- a/TFC/imports/UI/modals/login.html
+++ b/TFC/imports/UI/modals/login.html
@@ -47,7 +47,11 @@
 
             <footer class="modal-card-foot">
                 <div class="card-footer-item">
-                    <p class="subtitle has-text-centered">Pas encore de compte ? <span class="register link has-text-weight-semibold">Inscrivez-vous</span> pour continuer</p>
+                    <p class="subtitle has-text-centered">
+                        <span>Pas encore de compte ?</span>
+                        <span class="register link has-text-weight-semibold">Inscrivez-vous</span>
+                        <span>pour continuer</span>
+                    </p>
                 </div>
             </footer>
         </div>
