--- a/TFC/imports/UI/about.html
+++ b/TFC/imports/UI/about.html
@@ -1,38 +1,44 @@
 <template name="about">
     <br>
-    <br>
-    <br>
-    <h5 class="title is-5 has-text-centered">Plexar a été fondé en 2020 par 3 créateurs passionnés de l’écologie et de l’environnement.</h5>
-    <h5 class="title is-5 has-text-centered">Notre envie d’aider la planète nous as amenés à développer un site web du nom de Plexar permettant aux utilisateurs de réduire leur impact en dioxyde de carbone.</h5>
-    <br>
-    <h2 class="title is-2 has-text-centered">Notre équipe</h2>
+    <h2 class="title is-3 has-text-centered">Notre équipe</h2>
     <br>
     <div class="columns">
         <div class="column has-text-centered">
-            <figure class="image is-128x128" style="margin: 0 auto;">
-                <img class="is-rounded" src="Evan.jpg">
-            </figure>
-            <p>Evan</p>
-            <hr>
-            <p>Acteur de l'environnement et des réseaux</p>
+            <div class="card">
+                <div class="card-content">
+                    <figure class="image is-128x128" style="margin: 0 auto;">
+                        <img class="is-rounded" src="Evan.jpg">
+                    </figure>
+                    <p class="title">Evan</p>
+                    <p class="subtitle">Community Manager</p>
+                    <p class="subtitle is-italic"><span class="is-size-3">«</span> Your time is limited, so don’t waste it living someone else’s life. <span class="is-size-3">»</span></p>
+                </div>
+            </div>
         </div>
 
         <div class="column has-text-centered">
-            <figure class="image is-128x128" style="margin: 0 auto;">
-                <img class="is-rounded" src="Reza.png">
-            </figure>
-            <p>Reza</p>
-            <hr>
-            <p>Professionnel du code et de la création</p>
+            <div class="card">
+                <div class="card-content">
+                    <figure class="image is-128x128" style="margin: 0 auto;">
+                        <img class="is-rounded" src="Reza.png">
+                    </figure>
+                    <p class="title">Reza</p>
+                    <p class="subtitle">Développeur & Webmaster</p>
+                    <p class="subtitle is-italic"><span class="is-size-3">«</span> My code never has bugs. It just develops random unexpected features. <span class="is-size-3">»</span></p>
+                </div>
+            </div>
         </div>
 
         <div class="column has-text-centered">
-            <figure class="image is-128x128" style="margin: 0 auto;">
-                <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-            </figure>
-            <p>Henri</p>
-            <hr>
-            <p>Responsable design et conception</p>
+            <div class="card">
+                <div class="card-content">
+                    <figure class="image is-128x128" style="margin: 0 auto;">
+                        <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                    </figure>
+                    <p class="title">Henri</p>
+                    <p class="subtitle">Graphiste & Webdesigner</p>
+                </div>
+            </div>
         </div>
     </div>
 </template>
