--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -49,7 +49,7 @@
                             <div class="step-details">
                                 <p class="step-title">Voter</p>
                                 <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
-                                <p>Votez pour vos produits favoris pour leur donner de la visibilité</p>
+                                <p>Participez à la modération collective et votez pour vos produits favoris pour leur donner de la visibilité</p>
                             </div>
                         </li>
 
@@ -85,7 +85,7 @@
                 <div class="column has-text-centered">
                     <h4 class="title is-4">Voter</h4>
                     <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
-                    <p>Votez pour vos produits favoris pour leur donner de la visibilité</p>
+                    <p>Participez à la modération collective et votez pour vos produits favoris pour leur donner de la visibilité</p>
                 </div>
 
                 <hr style="margin: 0;">
