--- a/TFC/imports/UI/searchResults.html
+++ b/TFC/imports/UI/searchResults.html
@@ -17,8 +17,8 @@
 
             <div class="column is-hidden-desktop" style="padding-left: 0;">
                 <button class="button" id="filter">
-                    <span class="icon" style="margin-right: 0;"><i class="fas fa-sort-amount-down"></i></span>
-                    Filtrer
+                    <span class="icon"><i class="fas fa-sort-amount-down"></i></span>
+                    <span>Filtrer</span>
                 </button>
             </div>
         </div>
@@ -72,6 +72,10 @@
             </div>
         </div>
     </form>
+
+    {{#if noResults}}
+        <h5 class="title is-5 has-text-centered">Votre recherche n'a donné aucun résultat.</h5>
+    {{/if}}
 
     {{#each displayProductsResults}}
         {{> productBanner}}
