--- a/TFC/imports/UI/user/favorite.html
+++ b/TFC/imports/UI/user/favorite.html
@@ -1,7 +1,14 @@
 <template name="favorite">
-    <div id="favoriteProducts">
-        {{#each displayFavoriteProducts}}
-            {{> productBanner}}
-        {{/each}}
-    </div>
+
+    {{#if noFavorite}}
+        <h5 class="title is-5 has-text-centered">
+            <span>Vous n'avez pas encore enregistré de favoris, vous pouvez utiliser l'icône</span>
+            <span class="icon"><i class="far fa-bookmark"></i></span>
+            <span>située en haut à droite de la page d'un produit pour l'ajouter à vos favoris.</span>
+        </h5>
+    {{/if}}
+
+    {{#each displayFavoriteProducts}}
+        {{> productBanner}}
+    {{/each}}
 </template>
