--- a/TFC/imports/UI/user/informations.html
+++ b/TFC/imports/UI/user/informations.html
@@ -132,6 +132,11 @@
             </button>
         </form>
     {{else}}
-        <p class="subtitle"><span class="register link has-text-weight-semibold">Inscrivez-vous</span> ou <span class="login link has-text-weight-semibold">connectez-vous</span> pour continuer.</p>
+        <p class="subtitle">
+            <span class="register link has-text-weight-semibold">Inscrivez-vous</span>
+            <span>ou</span>
+            <span class="login link has-text-weight-semibold">connectez-vous</span>
+            <span>pour continuer.</span>
+        </p>
     {{/if}}
 </template>
