--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -1,7 +1,7 @@
 <template name="userProfile">
     {{#if currentUser}}
         <!-- Displayed only when the user is logged in-->
-        <div class="tabs is-boxed is-fullwidth is-toggle">
+        <div class="tabs is-boxed is-fullwidth is-toggle is-hidden-mobile">
             <ul>
                 <li id="favorite">
                     <a>
@@ -41,6 +41,7 @@
                 </li>
             </ul>
         </div>
+
     {{else}}
         <!-- Displayed when the user is NOT logged in-->
     {{/if}}
