bulma's media component removed (unused), minor style changes

--- a/TFC/imports/UI/contact.html
+++ b/TFC/imports/UI/contact.html
@@ -2,11 +2,12 @@
     <h3 class="title is-3 has-text-centered">Contact</h3>
 
     <p class="has-text-centered">
-        Une question, une amélioration à proposer, un bug à signaler ?
+        <span>Une question, une amélioration à proposer, un avis à donner, un bug à signaler ?</span>
         <br>
-        Remplissez simplement le formulaire ci-dessous et nous reviendrons vers vous aussi rapidement que possible.
+        <span>Remplissez simplement le formulaire ci-dessous et nous reviendrons vers vous aussi rapidement que possible.</span>
     </p>
 
+    <br><br>
 
     <form class="container">
         <div class="field has-animated-label" id="emailField">
